- Fully implemented new pack exporting window, with per-folder configuration - Made a bunch of methods async - Fixed lag spike when opening the "open pack" dropdown - Massively increased editor opening speed - Increased texture garbage collection performance - Should have made textureCache thread save for future proofing - Replaced some deprecated functions throughout the code base - Improved file explorer performance on large folders - Fixed VersionControlWindow colored text being at 0% opacity